2025-04-14 Se corrige grafica de create.

--- a/CódigoFuente/BitacorasProduccion/Views/CTZ_Projects/Create.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/CTZ_Projects/Create.cshtml
@@ -506,6 +506,7 @@
                         data: { plantId: selectedPlantId },
                         success: function (response) {
                             if (response.success) {
+                                console.log(response)
                                 // Recorremos los datos para verificar si algún FY rebasa el 100%
                                 response.data.forEach(function (lineData) {
                                     lineData.DataByFY.forEach(function (fyItem) {
