2025-04-16 CTZ: Nueva version de gráficas y CTZ_OEE.

--- a/CódigoFuente/BitacorasProduccion/Views/CTZ_Catalogs/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/CTZ_Catalogs/Index.cshtml
@@ -68,6 +68,9 @@
                             <a href="@Url.Action("strokes_per_minute", ViewBag.ControllerName)" class="btn btn-catalog">
                                 <i class="fa fa-clock"></i> Strokes per Minute
                             </a>
+                            <a href="@Url.Action("CTZ_OEE", ViewBag.ControllerName)" class="btn btn-catalog">
+                                <i class="fa-solid fa-gauge-high"></i> OEE
+                            </a>
                         </div>
                         <!-- Sección para el área de Engineering -->
                         <div class="catalog-area">
